<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<RelativeLayout
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:background="@color/blanco"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/encabezado2">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include
                android:id="@+id/head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/encabezado"/>
        </RelativeLayout>
    </RelativeLayout>

        <RelativeLayout
            android:layout_below="@+id/encabezado2"
            android:layout_width="match_parent"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:layout_height="50dp"
            android:background="@drawable/titulobackground"
            android:id="@+id/titulopantalla">

            <RelativeLayout android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="Acerca del aplicativo"
                    android:layout_height="wrap_content"
                    android:id="@+id/titulo_volcan_label"
                    style="@style/titulo_layer_text" >
                </TextView>

            </RelativeLayout>

        </RelativeLayout>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/titulopantalla">

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">
        <TextView
            android:id="@+id/titulo" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Acerca del aplicativo"
            style="@style/informacion_titulo">

        </TextView>

        <TextView
            android:id="@+id/parrafo1"
            style="@style/informacion_texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/titulo"
            android:text="@string/primer_parrafo_info"></TextView>

        <TextView
            android:layout_below="@+id/parrafo1"
            android:id="@+id/parrafo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/segundo_parrafo_info"
            style="@style/informacion_texto">
        </TextView>

        <TextView
            android:layout_below="@+id/parrafo2"
            android:id="@+id/parrafo3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/informacion_titulo"

            android:text="Características">
        </TextView>

        <TextView
            android:layout_below="@+id/parrafo3"
            android:id="@+id/caracteristicas1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Caracteristicas_1"
            style="@style/informacion_texto">
        </TextView>

        <TextView
            android:layout_below="@+id/caracteristicas1"
            android:id="@+id/caracteristicas2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caracteristicas_2"
            style="@style/informacion_texto">
        </TextView>


        <TextView
            android:layout_below="@+id/caracteristicas2"
            android:id="@+id/caracteristicas3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caracteristicas_3"
            style="@style/informacion_texto">
        </TextView>


        <TextView
            android:layout_below="@+id/caracteristicas3"
            android:id="@+id/caracteristicas4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caracteristicas_4"
            style="@style/informacion_texto">
        </TextView>


        <TextView
            android:layout_below="@+id/caracteristicas4"
            android:id="@+id/caracteristicas5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caracteristicas_5"
            style="@style/informacion_texto">
        </TextView>


        <TextView
            android:layout_below="@+id/caracteristicas5"
            android:id="@+id/caracteristicas6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caracteristicas_6"
            style="@style/informacion_texto">
        </TextView>

        <TextView
            android:layout_below="@+id/caracteristicas6"
            android:id="@+id/caracteristicas7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caracteristicas_7"
            style="@style/informacion_texto">
        </TextView>

        <TextView
            android:layout_below="@+id/caracteristicas7"
            android:id="@+id/caracteristicas8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caracteristicas_8"
            style="@style/informacion_texto">
        </TextView>

        <TextView
            android:layout_below="@+id/caracteristicas8"
            android:id="@+id/caracteristicas10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caracteristicas_10"
            style="@style/informacion_texto">
        </TextView>
        <TextView android:id="@+id/caracteristicas9"
            style="@style/informacion_texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/caracteristicas10"
            android:text="@string/caracteristicas_9"
            android:textStyle="bold"/>
    </RelativeLayout>
</ScrollView>
</RelativeLayout>
<RelativeLayout android:layout_width="230dp"
android:id="@+id/mDrawerBlock"
android:layout_gravity="start"
android:background="@color/blanco"
android:choiceMode="singleChoice"
android:divider="@android:color/darker_gray"
android:layout_height="match_parent">
<include
    android:id="@+id/ty"
    layout="@layout/list" />
</RelativeLayout>
</android.support.v4.widget.DrawerLayout>