<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Videomapa">
    <RelativeLayout
        android:id="@+id/content_sismosvolcan"
        android:layout_width="match_parent"
        android:background="@color/blanco"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <RelativeLayout android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/encabezado2">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <include
                    android:id="@+id/head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/encabezado"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/encabezado2"
            style="@style/titulo_layer"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:background="@drawable/titulobackground"
            android:id="@+id/titulopantalla_detalles">
            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/bloque0_p"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:layout_height="60dp">

                <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp" >
                    <RelativeLayout
                        android:id="@+id/b22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@color/blanco"
                            android:text="Mapa de Ocurrencia del Lahar"/>

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_below="@+id/b1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_below="@+id/volcan"
                            android:textAlignment="center"
                            android:layout_width="wrap_content"
                            android:gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_volcan"
                            style="@style/titulo_layer_text" >
                        </TextView>
                    </LinearLayout>

                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_below="@id/titulopantalla_detalles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp">

            <RelativeLayout android:layout_width="match_parent"
                android:layout_height="match_parent">



                <WebView
                    android:id="@+id/activity_main_webview"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="match_parent"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp" />






                <VideoView
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:id="@+id/video" />

                <Button android:layout_width="55dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                     android:layout_height="55dp"
                    android:background="@drawable/fondocontrolesmultimedia"
                    android:text="@string/descarg"
                    style="@style/iconosmultimedia"
                    android:id="@+id/pausebutton"/>


<!--
                <VideoView
                    android:layout_width="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/video"
                    android:layout_above="@+id/controles"
                    android:layout_height="match_parent">
                </VideoView>
                -->


                <RelativeLayout android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_alignParentBottom="true"
                    android:gravity="center_horizontal"
                    android:id="@+id/controles"
                    android:padding="9dp"
                    android:layout_marginBottom="0dp"
                    android:layout_height="wrap_content">

                    <Button android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/fondocontrolesmultimedia"
                        android:text="@string/play"
                        style="@style/iconosmultimedia"
                        android:id="@+id/playbutton"/>




                </RelativeLayout>





                <include
                    android:id="@+id/ty255"
                    android:visibility="gone"
                        layout="@layout/optionsvolcan"
                     android:layout_width="match_parent"
                    android:layout_height="wrap_content" />




            </RelativeLayout>




        </RelativeLayout>



        <ProgressBar
            android:id="@+id/progressBar1"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content"></RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_height="47dp"
        android:id="@+id/opt1"
        android:visibility="gone"
        android:padding="0dp"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@drawable/gradient_buton"
            android:id="@+id/options"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_height="47dp">
            <TextView android:layout_width="36dp"
                android:layout_height="match_parent"
                android:textSize="17dp"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:background="@drawable/iconoslidebackground"
                android:text="@string/toup"
                android:textColor="@color/igp"
                android:id="@+id/openslide"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout android:layout_width="230dp"
        android:id="@+id/mDrawerBlock"
        android:layout_gravity="start"
        android:background="@color/blanco"
        android:choiceMode="singleChoice"
        android:divider="@android:color/darker_gray"
        android:layout_height="match_parent">
        <include
            android:id="@+id/ty"
             layout="@layout/list" />
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>